--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -1,92 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent"
     android:visibility="gone">
 
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <RelativeLayout
+
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/recipe_image_height"
+            android:id="@+id/recipe_image"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/recipe_title_text_size"
+            android:textColor="#000"
+            android:id="@+id/recipe_title"
+            android:padding="7dp"
+            android:layout_below="@+id/recipe_image"
+            android:text="Some Recipe title"/>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="parent"
-            app:layout_constraintRight_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/recipe_image_height"
-                android:id="@+id/recipe_image"
-                android:scaleType="centerCrop" />
+            android:orientation="horizontal"
+            android:weightSum="100"
+            android:layout_below="@+id/recipe_title"
+            android:id="@+id/container"
+            android:padding="10dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/recipe_title_text_size"
-                android:textColor="#000"
-                android:id="@+id/recipe_title"
-                android:padding="7dp"
-                android:layout_below="@+id/recipe_image"
-                android:text="Some Recipe title"/>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="100"
+                android:layout_weight="90"
+                android:textSize="@dimen/recipe_publisher_text_size"
+                android:textStyle="bold"
                 android:layout_below="@+id/recipe_title"
-                android:id="@+id/container"
-                android:padding="10dp">
+                android:id="@+id/ingredients_title"
+                android:text="Ingredients"/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="90"
-                    android:textSize="@dimen/recipe_publisher_text_size"
-                    android:textStyle="bold"
-                    android:layout_below="@+id/recipe_title"
-                    android:id="@+id/ingredients_title"
-                    android:text="Ingredients"/>
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:textSize="@dimen/recipe_publisher_text_size"
-                    android:textColor="@color/red"
-                    android:id="@+id/recipe_social_score"
-                    android:gravity="center"
-                    android:text="100"/>
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="vertical"
-                android:layout_below="@+id/container"
-                android:id="@+id/ingredients_container">
+                android:layout_weight="10"
+                android:textSize="@dimen/recipe_publisher_text_size"
+                android:textColor="@color/red"
+                android:id="@+id/recipe_social_score"
+                android:gravity="center"
+                android:text="100"/>
 
 
-            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:layout_below="@+id/container"
+            android:id="@+id/ingredients_container">
+        </LinearLayout>
 
 
-        </RelativeLayout>
+    </RelativeLayout>
 
-    </ScrollView>
+</ScrollView>
 
-</android.support.constraint.ConstraintLayout>
 
 
 
