--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -7,8 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".RecipeListActivity"
     android:background="#f2f2f2"
-    android:id="@+id/root_view"
-    android:focusableInTouchMode="true">
+    android:id="@+id/root_view">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -33,19 +32,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recipe_list"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent"
-        android:visibility="gone"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </android.support.v7.widget.RecyclerView>
-
 
 </android.support.design.widget.CoordinatorLayout>
