--- a/app/src/main/res/layout/layout_category_list_item.xml
+++ b/app/src/main/res/layout/layout_category_list_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    android:elevation="10dp">
+    app:cardElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
