--- a/app/src/main/res/layout/layout_recipe_list_item.xml
+++ b/app/src/main/res/layout/layout_recipe_list_item.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/card_view"
-        android:elevation="10dp">
+        app:cardElevation="10dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatImageView
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/recipe_image_height"
                 android:scaleType="centerCrop"
@@ -27,7 +28,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_below="@+id/recipe_image"
                 android:padding="10dp">
 
                 <TextView
@@ -49,7 +49,7 @@
                         android:layout_weight="90"
                         android:textSize="@dimen/recipe_publisher_text_size"
                         android:id="@+id/recipe_publisher"
-                        android:gravity="left"/>
+                        android:gravity="start"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -67,11 +67,21 @@
             </LinearLayout>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
+
 </LinearLayout>
+
+
+
+
+
+
+
+
+
 
 
 
