--- a/app/src/main/res/menu/recipe_search_menu.xml
+++ b/app/src/main/res/menu/recipe_search_menu.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_categories"
-        android:title="Categories"
-        android:icon="@drawable/ic_search_white_24dp" />
+        android:title="Categories"/>
 
 </menu>
