--- a/app/src/main/res/layout/layout_category_list_item.xml
+++ b/app/src/main/res/layout/layout_category_list_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,8 +16,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_launcher_background"
-            android:id="@+id/category_image" />
+            android:id="@+id/category_image"
+            android:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,4 +31,3 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
