--- a/app/src/main/res/layout/layout_loading_list_item.xml
+++ b/app/src/main/res/layout/layout_loading_list_item.xml
@@ -7,7 +7,6 @@
     <com.codingwithmitch.foodrecipes.util.HorizontalDottedProgress
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        />
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
