--- a/app/src/main/res/layout/layout_category_list_item.xml
+++ b/app/src/main/res/layout/layout_category_list_item.xml
@@ -16,8 +16,8 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_launcher_background"
-            android:id="@+id/category_image" />
+            android:id="@+id/category_image"
+            android:src="@drawable/ic_launcher_background" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,4 +31,3 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
